--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "toolsig",
+  "name": "inshackle",
   "version": "3.0.0",
-  "description": "Open Source Instagram Tools",
+  "description": "instagram follower master",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/officialputuid/toolsig.git"
+    "url": "git+https://github.com/ShuBhamg0sain/inshackle.git"
   },
-  "author": "officialputuid",
+  "author": "ShuBhamg0sain",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/officialputuid/toolsig/issues"
+    "url": "https://github.com/ShuBhamg0sain/inshackle/issues"
   },
-  "homepage": "https://github.com/officialputuid/toolsig#readme",
+  "homepage": "https://github.com/ShuBhamg0sain/inshackle#readme",
   "dependencies": {
     "chalk": "^2.4.2",
     "colors": "^1.4.0",
